--- a/src/client/src/containers/AzureFunctionsSelection/styles.module.css
+++ b/src/client/src/containers/AzureFunctionsSelection/styles.module.css
@@ -21,4 +21,5 @@
 .input {
   background-color: var(--vscode-sideBar-background);
   color: var(--vscode-editor-foreground);
+  text-overflow: ellipsis;
 }
